Adds middleware codemod

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,8 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve"
+    "isolatedModules": true
   },
-  "exclude": ["templates/**"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "exclude": ["templates/**", "node_modules"],
+  "include": ["**/*.ts"]
 }
