--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     }
   },
   "dependencies": {
-    "@blitzjs/installer": "0.30.0-canary.6",
+    "@blitzjs/installer": "^0.29.7",
     "jscodeshift": "0.11.0"
   },
   "prettier": {
@@ -44,11 +44,11 @@
     "@types/jest": "^26.0.20",
     "@types/jscodeshift": "0.7.1",
     "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3",
     "husky": "4.3.8",
+    "jest": "^26.6.3",
     "prettier": "2.2.1",
-    "pretty-quick": "3.1.0"
+    "pretty-quick": "3.1.0",
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.1.3"
   }
 }
