--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -24,31 +25,26 @@
     "url": "https://github.com/ntgussoni/blitz-guard/issues"
   },
   "homepage": "https://github.com/ntgussoni/blitz-guard#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged",
-      "pre-push": "npm run test"
-    }
-  },
   "dependencies": {
-    "@blitzjs/installer": "^0.29.7",
-    "jscodeshift": "0.11.0"
+    "@blitzjs/installer": "^0.38.0",
+    "jscodeshift": "^0.12.0"
   },
   "prettier": {
     "semi": false,
     "printWidth": 100
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@types/jest": "^26.0.20",
-    "@types/jscodeshift": "0.7.1",
-    "babel-jest": "^26.6.3",
-    "husky": "4.3.8",
-    "jest": "^26.6.3",
-    "prettier": "2.2.1",
-    "pretty-quick": "3.1.0",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3"
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "@types/jest": "^26.0.23",
+    "@types/jscodeshift": "^0.11.0",
+    "babel-jest": "^27.0.2",
+    "husky": "^6.0.0",
+    "jest": "^27.0.4",
+    "prettier": "2.3.1",
+    "pretty-quick": "3.1.1",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.4",
+    "react": "^17.0.2"
   }
 }
