--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "jest": "^27.0.4",
     "prettier": "2.3.1",
     "pretty-quick": "3.1.1",
+    "react": "^17.0.2",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.4",
-    "react": "^17.0.2"
+    "typescript": "^4.3.4"
   }
 }
